update check_box algorithm in annotation_parser

--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -157,8 +157,9 @@
     "        return False\n",
     "    \n",
     "    box_area = (box[2] - box[0]) * (box[3] - box[1])\n",
+    "    sliding_window_area = (sliding_window[2] - sliding_window[0]) * (sliding_window[3] - sliding_window[1])\n",
     "    overlap_area = (min(sliding_window[2], box[2]) - max(sliding_window[0], box[0])) * (min(sliding_window[3], box[3]) - max(sliding_window[1], box[1]))\n",
-    "    if overlap_area / box_area < overlapping:\n",
+    "    if overlap_area / min(box_area, sliding_window_area) < overlapping:\n",
     "        return False    \n",
     "    \n",
     "    return True"
@@ -243,7 +244,7 @@
     "save_path = 'processed'\n",
     "flag = 0\n",
     "sliding_window_size = 200\n",
-    "step = 10\n",
+    "step = 40\n",
     "overlapping = 0.8\n",
     "\n",
     "# ==================================================\n",
