--- a/features.ipynb
+++ b/features.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#data feature\n",
     "import cv2\n",
     "import numpy as np\n",
+    "from skimage.feature import local_binary_pattern\n",
     "\n",
     "# get horitonzal edges from sobelY\n",
     "def number_of_edgePixels(image):\n",
@@ -38,7 +39,32 @@
     "            num_peaks += 1\n",
     "        elif arr_1d[i] < arr_1d[i-1] and arr_1d[i] < arr_1d[i+1]:\n",
     "            num_valleys += 1\n",
-    "    return (num_peaks, num_valleys)"
+    "    return (num_peaks, num_valleys)\n",
+    "\n",
+    "# numbers of edges from canny edge detection, use dfs to explore number of group of edge pixels\n",
+    "def num_edges_canny(image, L2Gradient, sobel_kernal_size):\n",
+    "    T_lower = 100\n",
+    "    T_upper = 200 \n",
+    "    edge = cv2.Canny(image, T_lower, T_upper, apertureSize=sobel_kernal_size, L2Gradient = L2Gradient)\n",
+    "    def dfs(r, c):\n",
+    "        if r < 0 or r >= np.size(image, 0) or c < 0 or c >= np.size(image, 1) or image[r][c] == 0:\n",
+    "            return 0\n",
+    "            \n",
+    "        image[r][c] = 0\n",
+    "            \n",
+    "        for i, j in zip((r - 1, r + 1, r, r), (c, c, c - 1, c + 1)):\n",
+    "            dfs(i, j)\n",
+    "            \n",
+    "        return 1\n",
+    "    \n",
+    "    return sum(dfs(i, j) for i in range(np.size(image, 0)) for j in range(np.size(image, 1)))\n",
+    "\n",
+    "def lbp_histogram(image, radius, bins):\n",
+    "    # compute the LBP histogram of the image\n",
+    "    n_points = 8 * radius\n",
+    "    lbp = local_binary_pattern(image, n_points, radius, method='uniform')\n",
+    "    hist, _ = np.histogram(lbp, bins= bins, density=True)\n",
+    "    return np.ravel(hist)"
    ]
   },
   {
