--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -150,10 +150,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_box(sliding_window, box, overlapping):\n",
+    "def check_out_of_box(sliding_window, box):\n",
     "    if sliding_window[2] < box[0] or sliding_window[0] > box[2]:\n",
-    "        return False\n",
+    "        return True\n",
     "    if sliding_window[3] < box[1] or sliding_window[1] > box[3]:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "def check_box(sliding_window, box, overlapping):\n",
+    "    if check_out_of_box(sliding_window, box):\n",
     "        return False\n",
     "    \n",
     "    box_area = (box[2] - box[0]) * (box[3] - box[1])\n",
@@ -171,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop_image(save_path, image_name, boxs, flag, overlapping, sliding_window_size=200, step=100, count=0):\n",
+    "def crop_image(save_path, image_name, boxs, flag, overlapping, sliding_window_size=200, step=100):\n",
     "    img = cv2.imread(f'{save_path}/{image_name}')\n",
     "    feature_type = ['strong hyperbola', 'weak hyperbola', 'strong reflector', 'weak reflector', 'other', 'no feature']\n",
     "    # exclude the left axis and data above 0 ms\n",
@@ -184,6 +189,11 @@
     "        os.makedirs(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}')\n",
     "\n",
     "    for j in range(0, img.shape[0] - 1, step):\n",
+    "        count = 0\n",
+    "        for path in os.listdir(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}'):\n",
+    "            if path.startswith(f'{j}_'):\n",
+    "                count += 1\n",
+    "\n",
     "        for i in range(0, img.shape[1] - 1, step):\n",
     "            if j + sliding_window_size > img.shape[0] - 1 or i + sliding_window_size > img.shape[1] - 1:\n",
     "                continue\n",
@@ -194,19 +204,22 @@
     "                    # Check if the box is overlapping over 80%, if not don't label it            \n",
     "                    if check_box(sliding_window, box, overlapping):\n",
     "                        sub_img = img[j:j + sliding_window_size, i:i + sliding_window_size]\n",
-    "                        cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}/{count}.jpg', sub_img)\n",
+    "                        cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}/{j}_{count}.jpg', sub_img)\n",
     "                        count += 1\n",
     "                        break\n",
     "            else:\n",
     "                all_boxs = [box for label_type in boxs for box in label_type]\n",
+    "                is_out_of_box = True\n",
     "                for box in all_boxs:\n",
-    "                    if not check_box(sliding_window, box, 1 - overlapping):\n",
-    "                        sub_img = img[j:j + sliding_window_size, i:i + sliding_window_size]\n",
-    "                        cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}/{count}.jpg', sub_img)\n",
-    "                        count += 1\n",
+    "                    if not check_out_of_box(sliding_window, box):\n",
+    "                        is_out_of_box = False\n",
     "                        break\n",
-    "    print(f'generate {count} images of {feature_type[flag]}')\n",
-    "    return count"
+    "                if is_out_of_box:\n",
+    "                    sub_img = img[j:j + sliding_window_size, i:i + sliding_window_size]\n",
+    "                    cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}/{j}_{count}.jpg', sub_img)\n",
+    "                    count += 1\n",
+    "\n",
+    "    print(f'Finished generating images of {feature_type[flag]}')"
    ]
   },
   {
@@ -249,19 +262,11 @@
     "\n",
     "# ==================================================\n",
     "\n",
-    "count = 0\n",
     "image_names = image_names_parser(zipfile_name)\n",
     "for image_name in image_names:\n",
     "    boxs = labels_parser(zipfile_name, image_name)\n",
-    "    count += crop_image(save_path, image_name, boxs, flag, overlapping, sliding_window_size=sliding_window_size, step=step, count=count)"
+    "    count = crop_image(save_path, image_name, boxs, flag, overlapping, sliding_window_size=sliding_window_size, step=step)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
