optimize annotation_parser
update parsing strategy that each cropped image will only assign to one type of feature.

--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import cv2\n",
+    "import math\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -123,7 +124,7 @@
     "# Parameters Setting\n",
     "\n",
     "index = 0\n",
-    "flag = 2\n",
+    "flag = 0\n",
     "\n",
     "# ==================================================\n",
     "\n",
@@ -132,13 +133,13 @@
     "\n",
     "print(test_image)\n",
     "img = cv2.imread(f'processed/{test_image}')\n",
+    "color = np.array([3, 67, 223])\n",
     "box_width = 3\n",
     "for box in boxs[flag]:\n",
-    "    for i in range(3):\n",
-    "        img[box[1] - box_width:box[1] + box_width, box[0]:box[2], i] = 90 * i * np.ones_like(img[box[1] - box_width:box[1] + box_width, box[0]:box[2], i])\n",
-    "        img[box[3] - box_width:box[3] + box_width, box[0]:box[2], i] = 90 * i * np.ones_like(img[box[3] - box_width:box[3] + box_width, box[0]:box[2], i])\n",
-    "        img[box[1]:box[3], box[0] - box_width:box[0] + box_width, i] = 90 * i * np.ones_like(img[box[1]:box[3], box[0] - box_width:box[0] + box_width, i])\n",
-    "        img[box[1]:box[3], box[2] - box_width:box[2] + box_width, i] = 90 * i * np.ones_like(img[box[1]:box[3], box[2] - box_width:box[2] + box_width, i])\n",
+    "    img[box[1] - box_width:box[1] + box_width, box[0]:box[2], :] = np.ones_like(img[box[1] - box_width:box[1] + box_width, box[0]:box[2], :]) * color\n",
+    "    img[box[3] - box_width:box[3] + box_width, box[0]:box[2], :] = np.ones_like(img[box[3] - box_width:box[3] + box_width, box[0]:box[2], :]) * color\n",
+    "    img[box[1]:box[3], box[0] - box_width:box[0] + box_width, :] = np.ones_like(img[box[1]:box[3], box[0] - box_width:box[0] + box_width, :]) * color\n",
+    "    img[box[1]:box[3], box[2] - box_width:box[2] + box_width, :] = np.ones_like(img[box[1]:box[3], box[2] - box_width:box[2] + box_width, :]) * color\n",
     "\n",
     "plt.imshow(img)\n",
     "plt.show()"
@@ -176,50 +177,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop_image(save_path, image_name, boxs, flag, overlapping, sliding_window_size=200, step=100):\n",
+    "def crop_image(save_path, image_name, boxs, overlapping, sliding_window_size=200, step=40):\n",
     "    img = cv2.imread(f'{save_path}/{image_name}')\n",
-    "    feature_type = ['strong hyperbola', 'weak hyperbola', 'strong reflector', 'weak reflector', 'other', 'no feature']\n",
+    "    feature_types = ['strong hyperbola', 'weak hyperbola', 'strong reflector', 'weak reflector', 'other', '(len(feature_types) - 1)']\n",
     "    # exclude the left axis and data above 0 ms\n",
     "    # Boundary constant of images\n",
     "    IMAGE_START = 64\n",
     "    AXIS_ZERO = 121\n",
-    "    img = img[AXIS_ZERO:, IMAGE_START:]\n",
+    "    image_shape = img.shape\n",
+    "    image_start = [AXIS_ZERO, IMAGE_START]\n",
+    "    print(image_shape)\n",
+    "    height = math.ceil((image_shape[0] - sliding_window_size - image_start[0]) / step)\n",
+    "    width = math.ceil((image_shape[1] - sliding_window_size - image_start[1]) / step)\n",
     "\n",
-    "    if not os.path.exists(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}'):\n",
-    "        os.makedirs(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}')\n",
+    "    no_feature_index = len(feature_types) - 1\n",
+    "    cropped_image_type = np.ones((height, width)) * no_feature_index\n",
+    "    for k, box_list in enumerate(boxs):\n",
+    "        for box in box_list:\n",
+    "            box_index = [(b - image_start[0]) / step for b in box]\n",
+    "            start = [math.floor(box_index[0]), math.floor(box_index[1])]\n",
+    "            end = [math.ceil(box_index[2]), math.ceil(box_index[3])]\n",
+    "            for j in range(start[1], min(end[1] + 1, height)):\n",
+    "                for i in range(start[0], min(end[0] + 1, width)):\n",
+    "                    if cropped_image_type[j, i] == no_feature_index:\n",
+    "                        if j in start or i in end:\n",
+    "                            if check_box([j, i, j + 1, i + 1], box_index, overlapping):\n",
+    "                                cropped_image_type[j, i] = k\n",
+    "                        else:\n",
+    "                            cropped_image_type[j, i] = k\n",
+    "    \n",
+    "    for i in range(len(feature_types)):\n",
+    "        if not os.path.exists(f'{save_path}/cropped/{sliding_window_size}_{step}/{i}'):\n",
+    "            os.makedirs(f'{save_path}/cropped/{sliding_window_size}_{step}/{i}')\n",
     "\n",
-    "    for j in range(0, img.shape[0] - 1, step):\n",
-    "        count = 0\n",
-    "        for path in os.listdir(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}'):\n",
-    "            if path.startswith(f'{j}_'):\n",
-    "                count += 1\n",
+    "    for j in range(height):\n",
+    "        count = [0] * len(feature_types)\n",
+    "        for k in range(len(count)):\n",
+    "            for path in os.listdir(f'{save_path}/cropped/{sliding_window_size}_{step}/{k}'):\n",
+    "                if path.startswith(f'{j}_'):\n",
+    "                    image_num = int(path.split(\".jpg\")[0].split(\"_\")[1])\n",
+    "                    count[k] = max(count[k], image_num)\n",
     "\n",
-    "        for i in range(0, img.shape[1] - 1, step):\n",
-    "            if j + sliding_window_size > img.shape[0] - 1 or i + sliding_window_size > img.shape[1] - 1:\n",
-    "                continue\n",
+    "        for i in range(width):\n",
+    "            sliding_window = [IMAGE_START + i * step, AXIS_ZERO + j * step, IMAGE_START + sliding_window_size + i * step, AXIS_ZERO + sliding_window_size + j * step]\n",
+    "            sub_img = img[sliding_window[1]:sliding_window[3], sliding_window[0]:sliding_window[2]]\n",
+    "            feature_type = int(cropped_image_type[j, i])\n",
+    "            cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{feature_type}/{j * step}_{count[feature_type]}.jpg', sub_img)\n",
+    "            count[feature_type] += 1\n",
     "\n",
-    "            sliding_window = [i, j, i + sliding_window_size, j + sliding_window_size]\n",
-    "            if flag < 5:\n",
-    "                for box in boxs[flag]:\n",
-    "                    # Check if the box is overlapping over 80%, if not don't label it            \n",
-    "                    if check_box(sliding_window, box, overlapping):\n",
-    "                        sub_img = img[j:j + sliding_window_size, i:i + sliding_window_size]\n",
-    "                        cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}/{j}_{count}.jpg', sub_img)\n",
-    "                        count += 1\n",
-    "                        break\n",
-    "            else:\n",
-    "                all_boxs = [box for label_type in boxs for box in label_type]\n",
-    "                is_out_of_box = True\n",
-    "                for box in all_boxs:\n",
-    "                    if not check_out_of_box(sliding_window, box):\n",
-    "                        is_out_of_box = False\n",
-    "                        break\n",
-    "                if is_out_of_box:\n",
-    "                    sub_img = img[j:j + sliding_window_size, i:i + sliding_window_size]\n",
-    "                    cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{flag}/{j}_{count}.jpg', sub_img)\n",
-    "                    count += 1\n",
+    "    print(f'Finished generating images')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters Setting\n",
     "\n",
-    "    print(f'Finished generating images of {feature_type[flag]}')"
+    "IMAGE_START = 64\n",
+    "AXIS_ZERO = 121\n",
+    "\n",
+    "img = cv2.imread(f'processed/{test_image}')\n",
+    "box_width = 3\n",
+    "image_shape = img.shape\n",
+    "image_start = [AXIS_ZERO, IMAGE_START]\n",
+    "sliding_window_size = 200\n",
+    "step = 40\n",
+    "\n",
+    "height = math.ceil((image_shape[0] - sliding_window_size - image_start[0]) / step)\n",
+    "width = math.ceil((image_shape[1] - sliding_window_size - image_start[1]) / step)\n",
+    "\n",
+    "for i in range(width):\n",
+    "    for j in range(height):\n",
+    "        sliding_window = [IMAGE_START + i * step, AXIS_ZERO + j * step, IMAGE_START + sliding_window_size + i * step, AXIS_ZERO + sliding_window_size + j * step]\n",
+    "\n",
+    "plt.imshow(img)\n",
+    "plt.show()"
    ]
   },
   {
@@ -255,17 +290,16 @@
     "# Parameters Setting\n",
     "\n",
     "save_path = 'processed'\n",
-    "flag = 0\n",
     "sliding_window_size = 200\n",
     "step = 40\n",
-    "overlapping = 0.8\n",
+    "overlapping = 0.1\n",
     "\n",
     "# ==================================================\n",
     "\n",
     "image_names = image_names_parser(zipfile_name)\n",
     "for image_name in image_names:\n",
     "    boxs = labels_parser(zipfile_name, image_name)\n",
-    "    count = crop_image(save_path, image_name, boxs, flag, overlapping, sliding_window_size=sliding_window_size, step=step)"
+    "    crop_image(save_path, image_name, boxs, overlapping, sliding_window_size=sliding_window_size, step=step)"
    ]
   }
  ],
