--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -163,9 +163,8 @@
     "        return False\n",
     "    \n",
     "    box_area = (box[2] - box[0]) * (box[3] - box[1])\n",
-    "    sliding_window_area = (sliding_window[2] - sliding_window[0]) * (sliding_window[3] - sliding_window[1])\n",
     "    overlap_area = (min(sliding_window[2], box[2]) - max(sliding_window[0], box[0])) * (min(sliding_window[3], box[3]) - max(sliding_window[1], box[1]))\n",
-    "    if overlap_area / min(box_area, sliding_window_area) < overlapping:\n",
+    "    if overlap_area / box_area < overlapping:\n",
     "        return False    \n",
     "    \n",
     "    return True"
