--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -107,11 +107,11 @@
     "set the index of images and the feature type in the CVAT annotations\n",
     "\n",
     "Flag of the feature type\n",
-    "- strong hyperbola: 0\n",
-    "- weak hyperbola: 1\n",
-    "- strong reflector: 2\n",
-    "- weak reflector: 3\n",
-    "- other: 4\n",
+    "- small strong hyperbola: 0\n",
+    "- small weak hyperbola: 1\n",
+    "- noise: 2\n",
+    "- large strong hyperbola: 3\n",
+    "- large weak hyberbola: 4\n",
     "- no feature: 5"
    ]
   },
@@ -178,14 +178,14 @@
    "source": [
     "def crop_image(save_path, image_name, boxs, overlapping, sliding_window_size=200, step=40):\n",
     "    img = cv2.imread(f'{save_path}/{image_name}')\n",
-    "    feature_types = ['strong hyperbola', 'weak hyperbola', 'strong reflector', 'weak reflector', 'other', '(len(feature_types) - 1)']\n",
+    "    feature_types = ['small strong hyperbola', 'small weak hyperbola', 'noise', 'large strong hyperbola', 'large weak hyberbola', 'no feature']\n",
     "    # exclude the left axis and data above 0 ms\n",
     "    # Boundary constant of images\n",
     "    IMAGE_START = 64\n",
     "    AXIS_ZERO = 121\n",
     "    image_shape = img.shape\n",
     "    image_start = [AXIS_ZERO, IMAGE_START]\n",
-    "    print(image_shape)\n",
+    "    print('image shape:', image_shape)\n",
     "    height = math.ceil((image_shape[0] - sliding_window_size - image_start[0]) / step)\n",
     "    width = math.ceil((image_shape[1] - sliding_window_size - image_start[1]) / step)\n",
     "\n",
@@ -272,11 +272,11 @@
     "- overlapping: acceptance rate of overlapping of sliding windows and feature box. 0.8 in default, which means that sliding window covers above 80% of feature box\n",
     "\n",
     "Flag of the feature type\n",
-    "- strong hyperbola: 0\n",
-    "- weak hyperbola: 1\n",
-    "- strong reflector: 2\n",
-    "- weak reflector: 3\n",
-    "- other: 4\n",
+    "- small strong hyperbola: 0\n",
+    "- small weak hyperbola: 1\n",
+    "- noise: 2\n",
+    "- large strong hyperbola: 3\n",
+    "- large weak hyberbola: 4\n",
     "- no feature: 5"
    ]
   },
@@ -291,13 +291,14 @@
     "save_path = 'processed'\n",
     "sliding_window_size = 200\n",
     "step = 40\n",
-    "overlapping = 0.1\n",
+    "overlapping = 0.8\n",
     "\n",
     "# ==================================================\n",
     "\n",
     "image_names = image_names_parser(zipfile_name)\n",
-    "for image_name in image_names:\n",
+    "for image_index, image_name in enumerate(image_names):\n",
     "    boxs = labels_parser(zipfile_name, image_name)\n",
+    "    print(f'cropping {image_name} ...')\n",
     "    crop_image(save_path, image_name, boxs, overlapping, sliding_window_size=sliding_window_size, step=step)"
    ]
   }
