update images source by using unprocessed images

--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "# Parameters Setting\n",
     "\n",
-    "zipfile_name = 'Img8_13_15'\n",
+    "zipfile_name = '1stdataset20230420'\n",
     "\n",
     "# ==================================================\n",
     "\n",
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop_image(save_path, image_name, boxs, overlapping, sliding_window_size=200, step=40):\n",
+    "def crop_image(save_path, image_index, image_name, boxs, overlapping, sliding_window_size=200, step=40):\n",
     "    img = cv2.imread(f'{save_path}/{image_name}')\n",
     "    feature_types = ['small strong hyperbola', 'small weak hyperbola', 'noise', 'large strong hyperbola', 'large weak hyberbola', 'no feature']\n",
     "    # exclude the left axis and data above 0 ms\n",
@@ -205,23 +205,24 @@
     "                        else:\n",
     "                            cropped_image_type[j, i] = k\n",
     "    \n",
+    "    # create folders for cropped images\n",
     "    for i in range(len(feature_types)):\n",
-    "        if not os.path.exists(f'{save_path}/cropped/{sliding_window_size}_{step}/{i}'):\n",
-    "            os.makedirs(f'{save_path}/cropped/{sliding_window_size}_{step}/{i}')\n",
-    "\n",
+    "        if not os.path.exists(f'{save_path}/cropped/{sliding_window_size}_{step}/{image_index}/{i}'):\n",
+    "            os.makedirs(f'{save_path}/cropped/{sliding_window_size}_{step}/{image_index}/{i}')\n",
+    "    # output cropped images\n",
     "    for j in range(height):\n",
     "        count = [0] * len(feature_types)\n",
     "        for k in range(len(count)):\n",
-    "            for path in os.listdir(f'{save_path}/cropped/{sliding_window_size}_{step}/{k}'):\n",
-    "                if path.startswith(f'{j}_'):\n",
+    "            for path in os.listdir(f'{save_path}/cropped/{sliding_window_size}_{step}/{image_index}/{k}'):\n",
+    "                if path.startswith(f'{j * step}_'):\n",
     "                    image_num = int(path.split(\".jpg\")[0].split(\"_\")[1])\n",
     "                    count[k] = max(count[k], image_num)\n",
     "\n",
     "        for i in range(width):\n",
-    "            sliding_window = [IMAGE_START + i * step, AXIS_ZERO + j * step, IMAGE_START + sliding_window_size + i * step, AXIS_ZERO + sliding_window_size + j * step]\n",
-    "            sub_img = img[sliding_window[1]:sliding_window[3], sliding_window[0]:sliding_window[2]]\n",
+    "            sliding_window = [AXIS_ZERO + j * step, IMAGE_START + i * step, AXIS_ZERO + sliding_window_size + j * step, IMAGE_START + sliding_window_size + i * step]\n",
+    "            sub_img = img[sliding_window[0]:sliding_window[2], sliding_window[1]:sliding_window[3]]\n",
     "            feature_type = int(cropped_image_type[j, i])\n",
-    "            cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{feature_type}/{j * step}_{count[feature_type]}.jpg', sub_img)\n",
+    "            cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{image_index}/{feature_type}/{j * step}_{count[feature_type]}.jpg', sub_img)\n",
     "            count[feature_type] += 1\n",
     "\n",
     "    print(f'Finished generating images')"
@@ -288,7 +289,7 @@
    "source": [
     "# Parameters Setting\n",
     "\n",
-    "save_path = 'processed'\n",
+    "save_path = 'unprocessed_images'\n",
     "sliding_window_size = 200\n",
     "step = 40\n",
     "overlapping = 0.8\n",
@@ -298,8 +299,9 @@
     "image_names = image_names_parser(zipfile_name)\n",
     "for image_index, image_name in enumerate(image_names):\n",
     "    boxs = labels_parser(zipfile_name, image_name)\n",
+    "    image_name = image_name.replace('_processed', '')\n",
     "    print(f'cropping {image_name} ...')\n",
-    "    crop_image(save_path, image_name, boxs, overlapping, sliding_window_size=sliding_window_size, step=step)"
+    "    crop_image(save_path, image_index, image_name, boxs, overlapping, sliding_window_size=sliding_window_size, step=step)"
    ]
   }
  ],
