update parsing algorithm in annotation_parser

--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -196,14 +196,12 @@
     "            box_index = [(b - image_start[0]) / step for b in box]\n",
     "            start = [math.floor(box_index[0]), math.floor(box_index[1])]\n",
     "            end = [math.ceil(box_index[2]), math.ceil(box_index[3])]\n",
-    "            for j in range(start[1], min(end[1] + 1, height)):\n",
-    "                for i in range(start[0], min(end[0] + 1, width)):\n",
-    "                    if cropped_image_type[j, i] == no_feature_index:\n",
-    "                        if j in start or i in end:\n",
-    "                            if check_box([j, i, j + 1, i + 1], box_index, overlapping):\n",
-    "                                cropped_image_type[j, i] = k\n",
-    "                        else:\n",
-    "                            cropped_image_type[j, i] = k\n",
+    "            sub_height_start = int(math.floor((AXIS_ZERO - image_start[0]) / step))\n",
+    "            sub_width_start = int(math.floor((IMAGE_START - image_start[1]) / step))\n",
+    "            for j in range(max(start[0] - int(sliding_window_size/step), sub_height_start), min(end[0] + int(sliding_window_size/step), height)):\n",
+    "                for i in range(max(start[1] - int(sliding_window_size/step), sub_width_start), min(end[1] + int(sliding_window_size/step), width)):\n",
+    "                    if cropped_image_type[j, i] == no_feature_index and check_box([j, i, j + int(sliding_window_size/step), i + int(sliding_window_size/step)], box_index, overlapping):\n",
+    "                        cropped_image_type[j, i] = k\n",
     "    \n",
     "    # create folders for cropped images\n",
     "    for i in range(len(feature_types)):\n",
