update image array index to [y, x] format

--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -83,7 +83,7 @@
     "            image_node = image\n",
     "\n",
     "    boxs = []\n",
-    "    coordinates = ['xtl', 'ytl', 'xbr', 'ybr']\n",
+    "    coordinates = ['ytl', 'xtl', 'ybr', 'xbr']\n",
     "    for i in range(len(labels)):\n",
     "        boxs.append([])\n",
     "    for box in image_node.findall('box'):\n",
@@ -93,7 +93,7 @@
     "        boxs[labels[box.get('label')]].append(points)\n",
     "\n",
     "    return boxs\n",
-    "boxs = labels_parser(zipfile_name, 'WLT_350_210926 P_2111131 WLT_350_210926__008 P_2111131_processed.JPG')\n",
+    "boxs = labels_parser(zipfile_name, 'WLT_350_210926 P_2111131 WLT_350_210926__002 P_2111131_processed.JPG')\n",
     "for i in range(len(boxs)):\n",
     "    print(boxs[i])"
    ]
@@ -136,10 +136,10 @@
     "color = np.array([3, 67, 223])\n",
     "box_width = 3\n",
     "for box in boxs[flag]:\n",
-    "    img[box[1] - box_width:box[1] + box_width, box[0]:box[2], :] = np.ones_like(img[box[1] - box_width:box[1] + box_width, box[0]:box[2], :]) * color\n",
-    "    img[box[3] - box_width:box[3] + box_width, box[0]:box[2], :] = np.ones_like(img[box[3] - box_width:box[3] + box_width, box[0]:box[2], :]) * color\n",
-    "    img[box[1]:box[3], box[0] - box_width:box[0] + box_width, :] = np.ones_like(img[box[1]:box[3], box[0] - box_width:box[0] + box_width, :]) * color\n",
-    "    img[box[1]:box[3], box[2] - box_width:box[2] + box_width, :] = np.ones_like(img[box[1]:box[3], box[2] - box_width:box[2] + box_width, :]) * color\n",
+    "    img[box[0] - box_width:box[0] + box_width, box[1]:box[3], :] = np.ones_like(img[box[0] - box_width:box[0] + box_width, box[1]:box[3], :]) * color\n",
+    "    img[box[2] - box_width:box[2] + box_width, box[1]:box[3], :] = np.ones_like(img[box[2] - box_width:box[2] + box_width, box[1]:box[3], :]) * color\n",
+    "    img[box[0]:box[2], box[1] - box_width:box[1] + box_width, :] = np.ones_like(img[box[0]:box[2], box[1] - box_width:box[1] + box_width, :]) * color\n",
+    "    img[box[0]:box[2], box[3] - box_width:box[3] + box_width, :] = np.ones_like(img[box[0]:box[2], box[3] - box_width:box[3] + box_width, :]) * color\n",
     "\n",
     "plt.imshow(img)\n",
     "plt.show()"
@@ -247,11 +247,11 @@
     "height = math.ceil((image_shape[0] - sliding_window_size - image_start[0]) / step)\n",
     "width = math.ceil((image_shape[1] - sliding_window_size - image_start[1]) / step)\n",
     "\n",
-    "for i in range(width):\n",
-    "    for j in range(height):\n",
-    "        sliding_window = [IMAGE_START + i * step, AXIS_ZERO + j * step, IMAGE_START + sliding_window_size + i * step, AXIS_ZERO + sliding_window_size + j * step]\n",
-    "\n",
-    "plt.imshow(img)\n",
+    "j, i = 0, 0\n",
+    "sliding_window = [AXIS_ZERO + j * step, IMAGE_START + i * step, AXIS_ZERO + sliding_window_size + j * step, IMAGE_START + sliding_window_size + i * step]\n",
+    "sub_img = img[sliding_window[0]:sliding_window[2], sliding_window[1]:sliding_window[3]]\n",
+    "            \n",
+    "plt.imshow(sub_img)\n",
     "plt.show()"
    ]
   },
