split cropped images with different datasets

--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop_image(save_path, image_index, image_name, boxs, overlapping, sliding_window_size=200, step=40):\n",
+    "def crop_image(save_path, zipfile_name, image_index, image_name, boxs, overlapping, sliding_window_size=200, step=40):\n",
     "    img = cv2.imread(f'{save_path}/{image_name}')\n",
     "    feature_types = ['small strong hyperbola', 'small weak hyperbola', 'noise', 'large strong hyperbola', 'large weak hyberbola', 'no feature']\n",
     "    # exclude the left axis and data above 0 ms\n",
@@ -205,13 +205,13 @@
     "    \n",
     "    # create folders for cropped images\n",
     "    for i in range(len(feature_types)):\n",
-    "        if not os.path.exists(f'{save_path}/cropped/{sliding_window_size}_{step}/{image_index}/{i}'):\n",
-    "            os.makedirs(f'{save_path}/cropped/{sliding_window_size}_{step}/{image_index}/{i}')\n",
+    "        if not os.path.exists(f'{save_path}/cropped/{sliding_window_size}_{step}/{zipfile_name}/{image_index}/{i}'):\n",
+    "            os.makedirs(f'{save_path}/cropped/{sliding_window_size}_{step}/{zipfile_name}/{image_index}/{i}')\n",
     "    # output cropped images\n",
     "    for j in range(height):\n",
     "        count = [0] * len(feature_types)\n",
     "        for k in range(len(count)):\n",
-    "            for path in os.listdir(f'{save_path}/cropped/{sliding_window_size}_{step}/{image_index}/{k}'):\n",
+    "            for path in os.listdir(f'{save_path}/cropped/{sliding_window_size}_{step}/{zipfile_name}/{image_index}/{k}'):\n",
     "                if path.startswith(f'{j * step}_'):\n",
     "                    image_num = int(path.split(\".jpg\")[0].split(\"_\")[1])\n",
     "                    count[k] = max(count[k], image_num)\n",
@@ -220,7 +220,7 @@
     "            sliding_window = [AXIS_ZERO + j * step, IMAGE_START + i * step, AXIS_ZERO + sliding_window_size + j * step, IMAGE_START + sliding_window_size + i * step]\n",
     "            sub_img = img[sliding_window[0]:sliding_window[2], sliding_window[1]:sliding_window[3]]\n",
     "            feature_type = int(cropped_image_type[j, i])\n",
-    "            cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{image_index}/{feature_type}/{j * step}_{count[feature_type]}.jpg', sub_img)\n",
+    "            cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{zipfile_name}/{image_index}/{feature_type}/{j * step}_{count[feature_type]}.jpg', sub_img)\n",
     "            count[feature_type] += 1\n",
     "\n",
     "    print(f'Finished generating images')"
@@ -299,7 +299,7 @@
     "    boxs = labels_parser(zipfile_name, image_name)\n",
     "    image_name = image_name.replace('_processed', '')\n",
     "    print(f'cropping {image_name} ...')\n",
-    "    crop_image(save_path, image_index, image_name, boxs, overlapping, sliding_window_size=sliding_window_size, step=step)"
+    "    crop_image(save_path, zipfile_name, image_index, image_name, boxs, overlapping, sliding_window_size=sliding_window_size, step=step)"
    ]
   }
  ],
