--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -92,10 +92,7 @@
     "            points.append(int(box.get(coordinate).split(\".\")[0]))\n",
     "        boxs[labels[box.get('label')]].append(points)\n",
     "\n",
-    "    return boxs\n",
-    "boxs = labels_parser(zipfile_name, 'WLT_350_210926 P_2111131 WLT_350_210926__002 P_2111131_processed.JPG')\n",
-    "for i in range(len(boxs)):\n",
-    "    print(boxs[i])"
+    "    return boxs"
    ]
   },
   {
@@ -176,15 +173,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop_image(save_path, zipfile_name, image_index, image_name, boxs, overlapping, sliding_window_size=200, step=40):\n",
+    "def crop_image(save_path, zipfile_name, image_index, image_name, image_start, boxs, overlapping, sliding_window_size=200, step=40):\n",
     "    img = cv2.imread(f'{save_path}/{image_name}')\n",
     "    feature_types = ['small strong hyperbola', 'small weak hyperbola', 'noise', 'large strong hyperbola', 'large weak hyberbola', 'no feature']\n",
-    "    # exclude the left axis and data above 0 ms\n",
-    "    # Boundary constant of images\n",
-    "    IMAGE_START = 64\n",
-    "    AXIS_ZERO = 121\n",
     "    image_shape = img.shape\n",
-    "    image_start = [AXIS_ZERO, IMAGE_START]\n",
     "    print('image shape:', image_shape)\n",
     "    height = math.ceil((image_shape[0] - sliding_window_size - image_start[0]) / step)\n",
     "    width = math.ceil((image_shape[1] - sliding_window_size - image_start[1]) / step)\n",
@@ -196,10 +188,8 @@
     "            box_index = [(b - image_start[0]) / step for b in box]\n",
     "            start = [math.floor(box_index[0]), math.floor(box_index[1])]\n",
     "            end = [math.ceil(box_index[2]), math.ceil(box_index[3])]\n",
-    "            sub_height_start = int(math.floor((AXIS_ZERO - image_start[0]) / step))\n",
-    "            sub_width_start = int(math.floor((IMAGE_START - image_start[1]) / step))\n",
-    "            for j in range(max(start[0] - int(sliding_window_size/step), sub_height_start), min(end[0] + int(sliding_window_size/step), height)):\n",
-    "                for i in range(max(start[1] - int(sliding_window_size/step), sub_width_start), min(end[1] + int(sliding_window_size/step), width)):\n",
+    "            for j in range(max(start[0] - int(sliding_window_size/step), 0), min(end[0] + int(sliding_window_size/step), height)):\n",
+    "                for i in range(max(start[1] - int(sliding_window_size/step), 0), min(end[1] + int(sliding_window_size/step), width)):\n",
     "                    if cropped_image_type[j, i] == no_feature_index and check_box([j, i, j + int(sliding_window_size/step), i + int(sliding_window_size/step)], box_index, overlapping):\n",
     "                        cropped_image_type[j, i] = k\n",
     "    \n",
@@ -217,7 +207,7 @@
     "                    count[k] = max(count[k], image_num)\n",
     "\n",
     "        for i in range(width):\n",
-    "            sliding_window = [AXIS_ZERO + j * step, IMAGE_START + i * step, AXIS_ZERO + sliding_window_size + j * step, IMAGE_START + sliding_window_size + i * step]\n",
+    "            sliding_window = [image_start[0] + j * step, image_start[1] + i * step, image_start[0] + sliding_window_size + j * step, image_start[1] + sliding_window_size + i * step]\n",
     "            sub_img = img[sliding_window[0]:sliding_window[2], sliding_window[1]:sliding_window[3]]\n",
     "            feature_type = int(cropped_image_type[j, i])\n",
     "            cv2.imwrite(f'{save_path}/cropped/{sliding_window_size}_{step}/{zipfile_name}/{image_index}/{feature_type}/{j * step}_{count[feature_type]}.jpg', sub_img)\n",
@@ -232,10 +222,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parameters Setting\n",
-    "\n",
-    "IMAGE_START = 64\n",
-    "AXIS_ZERO = 121\n",
+    "# Exclude the left axis and data above 0 ms\n",
+    "# Boundary constant of images\n",
+    "IMAGE_START = 0\n",
+    "AXIS_ZERO = 0     # 1st dataset: 121, 2nd dataset: 43\n",
     "\n",
     "img = cv2.imread(f'processed/{test_image}')\n",
     "box_width = 3\n",
@@ -248,7 +238,7 @@
     "width = math.ceil((image_shape[1] - sliding_window_size - image_start[1]) / step)\n",
     "\n",
     "j, i = 0, 0\n",
-    "sliding_window = [AXIS_ZERO + j * step, IMAGE_START + i * step, AXIS_ZERO + sliding_window_size + j * step, IMAGE_START + sliding_window_size + i * step]\n",
+    "sliding_window = [image_start[0] + j * step, image_start[1] + i * step, image_start[0] + sliding_window_size + j * step, image_start[1] + sliding_window_size + i * step]\n",
     "sub_img = img[sliding_window[0]:sliding_window[2], sliding_window[1]:sliding_window[3]]\n",
     "            \n",
     "plt.imshow(sub_img)\n",
@@ -291,6 +281,11 @@
     "sliding_window_size = 200\n",
     "step = 40\n",
     "overlapping = 0.8\n",
+    "# Exclude the left axis and data above 0 ms\n",
+    "# Boundary constant of images\n",
+    "IMAGE_START = 0\n",
+    "AXIS_ZERO = 0     # 1st dataset: 121, 2nd dataset: 43\n",
+    "image_start = [AXIS_ZERO, IMAGE_START]\n",
     "\n",
     "# ==================================================\n",
     "\n",
@@ -299,7 +294,7 @@
     "    boxs = labels_parser(zipfile_name, image_name)\n",
     "    image_name = image_name.replace('_processed', '')\n",
     "    print(f'cropping {image_name} ...')\n",
-    "    crop_image(save_path, zipfile_name, image_index, image_name, boxs, overlapping, sliding_window_size=sliding_window_size, step=step)"
+    "    crop_image(save_path, zipfile_name, image_index, image_name, image_start, boxs, overlapping, sliding_window_size=sliding_window_size, step=step)"
    ]
   }
  ],
