update pixel to cropped image mapping in annotation_parser

--- a/annotation_parser.ipynb
+++ b/annotation_parser.ipynb
@@ -185,11 +185,16 @@
     "    cropped_image_type = np.ones((height, width)) * no_feature_index\n",
     "    for k, box_list in enumerate(boxs):\n",
     "        for box in box_list:\n",
-    "            box_index = [(b - image_start[0]) / step for b in box]\n",
+    "            box_index = []\n",
+    "            for i, b in enumerate(box):\n",
+    "                if i < 2:\n",
+    "                    box_index.append((b - image_start[0]) / step)     \n",
+    "                else:\n",
+    "                    box_index.append((b - image_start[1]) / step)\n",
     "            start = [math.floor(box_index[0]), math.floor(box_index[1])]\n",
-    "            end = [math.ceil(box_index[2]), math.ceil(box_index[3])]\n",
-    "            for j in range(max(start[0] - int(sliding_window_size/step), 0), min(end[0] + int(sliding_window_size/step), height)):\n",
-    "                for i in range(max(start[1] - int(sliding_window_size/step), 0), min(end[1] + int(sliding_window_size/step), width)):\n",
+    "            end = [math.ceil(box_index[2] + 1), math.ceil(box_index[3] + 1)]\n",
+    "            for j in range(max(start[0] - int(sliding_window_size/step), 0), min(end[0], height)):\n",
+    "                for i in range(max(start[1] - int(sliding_window_size/step), 0), min(end[1], width)):\n",
     "                    if cropped_image_type[j, i] == no_feature_index and check_box([j, i, j + int(sliding_window_size/step), i + int(sliding_window_size/step)], box_index, overlapping):\n",
     "                        cropped_image_type[j, i] = k\n",
     "    \n",
