add HoG to features

--- a/features.ipynb
+++ b/features.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -163,17 +149,21 @@
         "    \n",
         "    # Flatten the descriptors into a single vector\n",
         "    features = descriptors.flatten()\n",
-        "    return np.ravel(features)\n"
+        "    return np.ravel(features)\n",
+        "\n",
+        "# HoG\n",
+        "def hog_(image, image_size):\n",
+        "    gray_img = np.dot(image[..., :3], [0.2989, 0.5870, 0.1140])\n",
+        "    fd, hog_image = hog(image, orientations=9, pixels_per_cell=(100, 100),\n",
+        "                \tcells_per_block=(2, 2), visualize=True, feature_vector = True)\n",
+        "#     print(fd.shape)\n",
+        "#     print(hog_image.shape)\n",
+        "    return fd\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn import datasets\n",
-        "from sklearn.utils import Bunch\n",
-        "npdata = np.load('/content/2910_datasetC_200x200.npz')\n",
-        "print(npdata['data'].shape)"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -181,19 +171,29 @@
         "id": "_ZqayDRD3Rht",
         "outputId": "b8237208-9a8d-4a51-d50c-26728fbdb3dd"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(2910, 200, 200)\n"
           ]
         }
+      ],
+      "source": [
+        "from sklearn import datasets\n",
+        "from sklearn.utils import Bunch\n",
+        "npdata = np.load('/content/2910_datasetC_200x200.npz')\n",
+        "print(npdata['data'].shape)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aqezqG1X02hn"
+      },
+      "outputs": [],
       "source": [
         "#example of using features to train model\n",
         "number_image = 2910\n",
@@ -212,12 +212,21 @@
         "    \n",
         "print(img.shape)\n",
         "dataset = Bunch(data = img, target=npdata['label'])"
-      ],
-      "metadata": {
-        "id": "aqezqG1X02hn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
