add documentation to data preprocessing code

--- a/dataSet_generator_hyperbola.ipynb
+++ b/dataSet_generator_hyperbola.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# data_generator\n",
+    "This repository contains the code for generating the dataset in npz format for the Capstone project.\n",
+    "\n",
+    "### Instructions\n",
+    "1. Create folders for each class in the same directory, rename each folder as its label name. (It's what annotation_parser can do)\n",
+    "2. Put images to each folder according to its label.\n",
+    "3. set scale_percent(resizing image to scale_percent% of original image, unit:%, default = 100%) \n",
+    "4. write down all labels (all folder's name) in array class_name\n",
+    "5. set sliding window size to the correct width of the image, note that length must be equal to width.\n",
+    "6. Adjust path, image format and export file name\n",
+    "\n",
+    "### Reference\n",
+    "1. numpy save data: https://numpy.org/doc/stable/reference/generated/numpy.savez.html\n",
+    "2. Iris datset training sample in Bunch format. https://scikit-learn.org/stable/auto_examples/svm/plot_iris_svc.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -45,7 +66,7 @@
     "count = 0\n",
     "\n",
     "for i, image_index in enumerate(s):\n",
-    "    path = f'unprocessed_images/cropped/200_40/test_1st2ndDataset/{image_index}/'\n",
+    "    path = f'unprocessed_images/cropped/200_40/test_1st2ndDataset/{image_index}/' # adjust to the right path of your dataset\n",
     "    if not os.path.exists(path):\n",
     "        continue\n",
     "\n",
@@ -53,7 +74,7 @@
     "    images = []\n",
     "    if i == 0:\n",
     "        for file_name in os.listdir(path):\n",
-    "            if file_name.endswith(\".jpg\"):\n",
+    "            if file_name.endswith(\".jpg\"): # adjust to the right format of your dataset\n",
     "                image = im.imread(f'{path}{file_name}')\n",
     "                #trans into grayscale\n",
     "                rgb_weights = [0.2989, 0.5870, 0.1140]\n",
@@ -65,7 +86,7 @@
     "        n = len(os.listdir(path))\n",
     "        random_image_index = set(np.random.randint(n, size=image_count_s[i]))\n",
     "        for j, file_name in enumerate(os.listdir(path)):\n",
-    "            if j in random_image_index and file_name.endswith(\".jpg\"):\n",
+    "            if j in random_image_index and file_name.endswith(\".jpg\"): # adjust to the right format of your dataset\n",
     "                image = im.imread(f'{path}{file_name}')\n",
     "                #trans into grayscale\n",
     "                rgb_weights = [0.2989, 0.5870, 0.1140]\n",
@@ -82,7 +103,7 @@
     "depth = depth.astype(np.uint16)\n",
     "labels = labels.astype(np.uint8)\n",
     "\n",
-    "np.savez(str(total_image_count)+'_datasetA.npz', data=data, depth=depth, label=labels)"
+    "np.savez(str(total_image_count)+'_datasetA.npz', data=data, depth=depth, label=labels) # adjust to the desired name of your output dataset"
    ]
   },
   {
@@ -91,12 +112,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# check the dataset built successfully\n",
     "npdata = np.load(f'3306_dataset.npz')\n",
     "depth = npdata['depth']\n",
     "label = npdata['label']\n",
-    "print(depth[depth == 800].shape)\n",
-    "print(label[label == 1].shape)\n",
-    "print(label[3305])"
+    "print(depth.shape)\n",
+    "print(label.shape)"
    ]
   }
  ],
