--- a/dataSet_generator.ipynb
+++ b/dataSet_generator.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# data_generator\n",
+    "This repository contains the code for generating the dataset in npz format for the Capstone project.\n",
+    "\n",
+    "### Instructions\n",
+    "1. Create folders for each class in the same directory, rename each folder as its label name. (It's what annotation_parser can do)\n",
+    "2. Put images to each folder according to its label.\n",
+    "3. set scale_percent(resizing image to scale_percent% of original image, unit:%, default = 100%) \n",
+    "4. write down all labels (all folder's name) in array class_name\n",
+    "5. set sliding window size to the correct width of the image, note that length must be equal to width.\n",
+    "6. Adjust path, image format and export file name\n",
+    "\n",
+    "### Reference\n",
+    "1. numpy save data: https://numpy.org/doc/stable/reference/generated/numpy.savez.html\n",
+    "2. Iris datset training sample in Bunch format. https://scikit-learn.org/stable/auto_examples/svm/plot_iris_svc.html"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,44 +32,62 @@
     "from matplotlib import image as im\n",
     "import numpy as np\n",
     "import os\n",
-    "from sklearn.utils import Bunch\n",
-    "scale_percent = 25\n",
-    "s = ['top','middle','bottom']\n",
+    "from sklearn.utils import Bunch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_name = '_datasetC.npz'\n",
+    "scale_percent = 25 # percent of original size\n",
+    "class_name = ['top','middle','bottom']\n",
+    "num_image = 23  # number of classes (folders' name is from 0 to 22)\n",
+    "sliding_window_size = 200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "image_count = []\n",
     "total_image_count = 0\n",
-    "for folder in s:\n",
+    "for folder in class_name:\n",
     "    count = 0\n",
-    "    for image_index in range(23):\n",
-    "        path = f'cropped/{folder}/200_100/{image_index:03}/'\n",
+    "    for image_index in range(num_image):\n",
+    "        path = f'cropped/{folder}/200_100/{image_index:03}/' # adjust to the right path of your dataset\n",
     "        if not os.path.exists(path):\n",
     "            continue\n",
     "        \n",
     "        for file_name in os.listdir(path):\n",
-    "            if file_name.endswith(\".jpg\"):\n",
+    "            if file_name.endswith(\".jpg\"):  # adjust to the right format of your dataset\n",
     "                count += 1\n",
     "    image_count.append(count)\n",
     "    total_image_count += count\n",
     "\n",
     "# sliding window parameters set up\n",
-    "sliding_window_size = 200\n",
     "data = np.zeros([total_image_count, int(sliding_window_size*scale_percent*0.01), int(sliding_window_size*scale_percent*0.01)])\n",
     "labels = np.zeros(total_image_count)\n",
     "count = 0\n",
-    "for label, folder in enumerate(s):\n",
+    "for label, folder in enumerate(class_name):\n",
     "    images = []\n",
-    "    for image_index in range(23):\n",
-    "        path = f'cropped/{folder}/200_100/{image_index:03}/'\n",
+    "    for image_index in range(num_image):\n",
+    "        path = f'cropped/{folder}/200_100/{image_index:03}/' # adjust to the right path of your dataset\n",
     "        if not os.path.exists(path):\n",
     "            continue\n",
     "\n",
     "        for file_name in os.listdir(path):\n",
-    "            if file_name.endswith(\".jpg\"):\n",
-    "#                 image = Image.open(f'{path}{file_name}')\n",
+    "            if file_name.endswith(\".jpg\"): # adjust to the right format of your dataset\n",
     "                image = im.imread(f'{path}{file_name}')\n",
+    "\n",
     "                #trans into grayscale\n",
     "                rgb_weights = [0.2989, 0.5870, 0.1140]\n",
     "                image = np.dot(image[...,:3], rgb_weights)\n",
-    "#                 images.append(np.array(image))\n",
+    "\n",
     "                images.append(resizeImage(image, scale_percent))\n",
     "    data[count:count + image_count[label]] = np.array(images)\n",
     "    labels[count:count + image_count[label]] = np.ones(len(images)) * label\n",
@@ -56,24 +95,8 @@
     "    \n",
     "    data = data.astype(np.uint8)\n",
     "    labels = labels.astype(np.uint8)\n",
-    "# check = image_count[0] + image_count[1]\n",
-    "# print(labels[check])\n",
-    "# print(data[check].shape)\n",
-    "# plt.imshow(data[check], cmap='gray')\n",
-    "    \n",
-    "n = 100; #image numbers\n",
-    "# images=np.zeros(shape=(2*n, sliding_window_size, sliding_window_size))\n",
-    "# labels=np.zeros(shape=(2*n,1))\n",
-    "# for j in range(0,2): \n",
-    "#     for i in range(1,n+1):\n",
-    "#         filename = 'C:/Users/KLAB/pictures/CNN/'+s[j]+str(i)+'.PNG'\n",
-    "#         image= Image.open(filename)\n",
-    "#         images[i-1+n*j]=np.array(image)\n",
-    "#         labels[i-1+n*j]=j\n",
-    "#         print(filename)\n",
-    "#         plt.imshow(images[i-1],cmap='gray')\n",
     "\n",
-    "np.savez(str(total_image_count)+'_datasetC.npz', data=data, label=labels)"
+    "np.savez(str(total_image_count)+ dataset_name, data=data, label=labels) # adjust to the right name of desired dataset name"
    ]
   },
   {
@@ -109,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
